--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "elm-ethereum-ports": "^1.0.1",
     "ethereumjs-utils": "^5.2.5",
     "jquery": "^3.5.1",
-    "parcel": "^1.12.4"
+    "parcel": "^1.12.4",
+    "svg": "^0.1.0"
   },
   "assetsPath": "./static/assets"
 }
