--- a/config.json
+++ b/config.json
@@ -1,20 +1,14 @@
 [
   {
     "name": "xDai",
-    "network": 100,
-    "contract": "0x2024A680EE628725bd99c36Df223189f678C6945",
-    "scan": 14726216
+    "network": 100
   },
   {
     "name": "Ethereum",
-    "network": 1,
-    "contract": "0x8D213dc5Cc6c3D2746E2B90a2D1C9E589ebCb532",
-    "scan": 11927122
+    "network": 1
   },
   {
     "name": "BSC",
-    "network": 56,
-    "contract": "",
-    "scan": 0
+    "network": 56
   }
 ]
