--- a/config.json
+++ b/config.json
@@ -1,30 +1,31 @@
 [
   {
     "name": "xDai",
-    "chainId": 100,
+    "networkId": 100,
     "nodeUrl": "https://dai.poa.network",
     "explorerUrl": "https://blockscout.com/xdai/mainnet/"
   },
   {
     "name": "Ethereum",
-    "chainId": 1,
-    "nodeUrl": "https://mainnet.infura.io/v3/429e19ab9d27496581835fe705ac4702"
+    "networkId": 1,
+    "nodeUrl": "https://mainnet.infura.io/v3/429e19ab9d27496581835fe705ac4702",
+    "explorerUrl": "https://etherscan.io/"
   },
   {
     "name": "BSC",
-    "chainId": 56,
+    "networkId": 56,
     "nodeUrl": "https://bsc-mainnet.0xinfra.com",
     "explorerUrl": "https://www.bscscan.com/"
   },
   {
     "name": "Arbitrum",
-    "chainId": 42131,
+    "networkId": 42131,
     "nodeUrl": "https://arbitrum-mainnet.infura.io/v3/429e19ab9d27496581835fe705ac4702",
     "explorerUrl": "https://arbiscan.com/"
   },
   {
     "name": "Polygon",
-    "chainId": 137,
+    "networkId": 137,
     "nodeUrl": "https://polygon-mainnet.infura.io/v3/429e19ab9d27496581835fe705ac4702",
     "explorerUrl": "https://polyscan.com/"
   }
